--- a/electron-app/src/index.html
+++ b/electron-app/src/index.html
@@ -10,12 +10,13 @@
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="manifest.json" />
     <title>React App</title>
-    <script defer="defer" src="static/js/main.af059e69.js"></script>
-    <link href="static/css/main.20cc7845.css" rel="stylesheet">
+    <script defer="defer" src="static/js/main.ce093700.js"></script>
+    <link href="static/css/main.e6c1adc6.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
 </body>
 
 </html>
